Major progress. Only thing left is to fill out the business logic rules (though I built in an engine to do it this time) and then cleanup.

--- a/public/excel.html
+++ b/public/excel.html
@@ -54,12 +54,14 @@
             <div><button class="done-sorting cta-button" onclick="runReport(this)"   >Preview Output Using Above Data</button></div>
         </div>
     </main>
-    <div class="output-table">
-        <table>
-            <thead></thead>
-            <tbody></tbody>
-        </table>
-    </div>
+    <section id="output-panels">
+        <div class="output-table">
+            <table>
+                <thead></thead>
+                <tbody></tbody>
+            </table>
+        </div>
+    </section>
     <section class="file-drop-target">
             <label id="file-dropzone" class="file-dropzone" for="input">
                 <input type="file" id="input" name="input" multiple>
