--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>read-excel-file</title>
+    <title>Flambé :: BURNIN' DOWN THE HOUSE!</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="lib/css/flambe.css">
 </head>
@@ -52,10 +52,7 @@
     </main>
     <section id="output-panels">
         <div class="output-table">
-            <table>
-                <thead></thead>
-                <tbody></tbody>
-            </table>
+          
         </div>
     </section>
     <section class="file-drop-target">
