--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>Flambé :: BURNIN' DOWN THE HOUSE!</title>
     <meta charset="utf-8">
+    <link href="https://fonts.googleapis.com/css?family=Karla:400,400i,700,700i&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="lib/css/flambe.css">
 </head>
 
