--- a/public/index.html
+++ b/public/index.html
@@ -24,12 +24,12 @@
             </div>
             <div class="half-width picker">
                 <span>Days in iteration:</span>
-                <button id="picker-dec" class="picker-pushers" onmousedown='incDec(-1);' onmouseup='released();'></button>
+                <button id="picker-dec" class="picker-pushers" onmousedown="incDec(-1)" onmouseup="released()"></button>
                 <div class="picker-panel" style="--value:-250px">
                     <input id="days-in-iteration" class="picker-panel-presenter" type="text" placeholder="" maxlength="2" onfocus="this.value=this.placeholder" onblur="this.placeholder=this.value; this.value=''; syncSpinner();" onInput="this.value=this.value.replace(/\D/,'')" required />
                     <label class="picker-panel-plate"></label>
                 </div>
-                <button id="picker-inc" class="picker-pushers" onmousedown='incDec(1);' onmouseup='released()'></button>
+                <button id="picker-inc" class="picker-pushers" onmousedown="incDec(1);" onmouseup="released()"></button>
             </div>
         </section>
         <div class="pbars"></div>
