Cleaned up some defaults

--- a/public/index.html
+++ b/public/index.html
@@ -86,7 +86,7 @@
     </section>
     <script src="lib/js/flambe.js"></script>
     <article id="burndown-chart-panel" style="--cols:11">
-        <input type="checkbox" name="settings-panel" class="settings-panel" id="settings-panel">
+        <input type="checkbox" name="settings-panel" class="settings-panel" id="settings-panel" value="" />
         <aside id="hamburger-settings-menu">
             <label class="hamburger" for="settings-panel">
                 <span></span>
