--- a/public/index.html
+++ b/public/index.html
@@ -48,6 +48,14 @@
                 <select id="selTeam" name="selTeam" placeholder="Select Team" size="6"></select>
             </div>
 
+
+            <div class='half-width itr-form-field'>
+                <input id="txtMTV" name="txtMTV" type="text" required class="input-field faux-select" autocomplete="false"
+                    placeholder="" />
+                <label for="txtMTV" class="txtMTV-label">- Select MTV -</label>
+                <select id="selMTV" name="selMTV" placeholder="Select MTV" size="6"></select>
+            </div>
+
         </section>
         <div class="pbars"></div>
         <div class="sort-order">
