--- a/public/index.html
+++ b/public/index.html
@@ -35,25 +35,25 @@
             </div>
 
             <div class='half-width itr-form-field'>
-                <input id="txtIteration" name="txtIteration" type="text" required class="input-field faux-select"
+                <input id="txtIteration" name="txtIteration" type="text" required class="input-field filter-select"
                     autocomplete="false" placeholder="" />
                 <label for="txtIteration" class="txtIteration-label">- Select Iteration -</label>
-                <select id="selIteration" name="selIteration" placeholder="Select Iteration" size="6"></select>
+                <select id="selIteration" name="selIteration" placeholder="Select Iteration" ></select>
             </div>
 
             <div class='half-width itr-form-field'>
-                <input id="txtTeam" name="txtTeam" type="text" required class="input-field faux-select" autocomplete="false"
+                <input id="txtTeam" name="txtTeam" type="text" required class="input-field filter-select" autocomplete="false"
                     placeholder="" />
                 <label for="txtTeam" class="txtTeam-label">- Select Team -</label>
-                <select id="selTeam" name="selTeam" placeholder="Select Team" size="6"></select>
+                <select id="selTeam" name="selTeam" placeholder="Select Team" ></select>
             </div>
 
 
             <div class='half-width itr-form-field'>
-                <input id="txtMTV" name="txtMTV" type="text" required class="input-field faux-select" autocomplete="false"
+                <input id="txtMTV" name="txtMTV" type="text" required class="input-field filter-select" autocomplete="false"
                     placeholder="" />
                 <label for="txtMTV" class="txtMTV-label">- Select MTV -</label>
-                <select id="selMTV" name="selMTV" placeholder="Select MTV" size="6"></select>
+                <select id="selMTV" name="selMTV" placeholder="Select MTV" ></select>
             </div>
 
         </section>
