Added multi-selectable MTV's

--- a/public/index.html
+++ b/public/index.html
@@ -49,11 +49,11 @@
             </div>
 
 
-            <div class='half-width itr-form-field'>
+            <div class='full-width itr-form-field'>
                 <input id="txtMTV" name="txtMTV" type="text" required class="input-field filter-select" autocomplete="false"
                     placeholder="" />
                 <label for="txtMTV" class="txtMTV-label">- Select MTV -</label>
-                <select id="selMTV" name="selMTV" placeholder="Select MTV" ></select>
+                <select id="selMTV" name="selMTV" placeholder="Select MTV" multiple size="9"></select>
             </div>
 
         </section>
