--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
 
 <body class="dark">
     <main id='iteration-info'>
+            <svg xmlns="http://www.w3.org/2000/svg" opacity="0.75" height="60" viewBox="0 0 269 77"><defs></defs><path fill="#362F2D" fill-rule="evenodd" d="M92.3 72.5L67.5 84l-9.4-.2 26.5-69.6 7.7 2.3-16 42.6L96 54.8l-3.7 17.7zM6 83l32 1 7-44 26-4 3-8-28 1 2-10 27 3 3-10L20 0l-6 32-9-1-3 12h10M148.6 84.6L94 84.2l5.3-30.7 36.5-5.1.6-4-35.2-5.6 3.3-20.6L155.3 30l-6.7 54.6zM121 56.4l-2.6 21.3 12.7.4 3.8-24-14 2.3zM231.2 64.3l-2.9 3 2.5 3.4-1 14.7-23.2-.2 4.4-42.3 8.5 2 13.1 3-1.4 16.4zm-15 12.2l6.8.4.5-5.5-6.2-4.8-1.1 9.9zm2-22.4l-.4 2.5 6.5 5.7.5-7L218 54zM233.8 48.2l16.8 4.6-.7 7.4-10.5 6.9-.7 6.8 10.9.9-.9 10.7-18-.1 3.1-37.2zm10.4 12l.6-5.7-4.3-1-.8 9.9 4.5-3.1zM170.4 39.2l9.4 4.8.9-8.1 11.5 2.7-1.3 8.5 8.6-2.4.6-4.3 9.6 2.2-4 42h-10l3.2-35-8.6 2.7-3.3 32.2-11.7-.2 3.9-34.9-9.5-4.5-5 39.3-14-.1 7-53.5 13.4 3-.7 5.6z"></path><path fill="red" fill-rule="evenodd" d="M250.8 53.2l-.3 1.7-3.4-.8.1-1h-.1l.3-1.7 3.4.8-.2 1h.2zm-5.9.4l-4.1-.9.1-1h-.1l.3-1.8 4 1v1l-.2 1.7zm-6.5-1.4l-5-1 .2-1h-.2l.4-2 5 1.2-.3 1h.2l-.3 1.8zm-5.9-1.3l-4.8-1 .2-1h-.2l.3-2 4.8 1-.1 1h.1l-.3 2zm-7.6-1.7l-5.3-1.1.2-1h-.2l.4-2 5.3 1.1-.2 1h.2l-.4 2zm-8.3-1.8l-6.1-1.3.2-1h-.2l.4-2.2 6 1.4-.1 1h.2l-.4 2.1zm-7.9-2l-7.3-1.4.2-1h-.2l.4-2.2 7.4 1.5-.2 1h.2l-.5 2.2zm-18.9-3.9l-7.6-1.7.2-1h-.2l.6-2.4 7.6 1.7-.2 1h.2l-.6 2.4zM169.2 37l-10.3-2.3.3-1h-.3l.7-2.7 10.2 2.4-.2 1h.2l-.6 2.6zm-25.8-6.7l.8-2.9 11 2.6-.7 2.7-11-2.4zm-18.2-4l.9-3 12.6 2.8-.9 3-12.6-2.8zm-21-4.7l1-3.2 14.5 3.3-1 3.2-14.5-3.3zm-20.7-3.9l1-3.5 7.7 2.3-.9 3.4-7.8-2.2zm-21.9-5l1.2-3.9 14.8 3.4-1 4.6-15-4.2zm-26-5.3L37 3.2l17.7 5.3-1.2 3.8-17.9-5zM19.1 4.7V0l8.1 2.4-1.4 4.2L19 4.8z"></path><path fill="#ED1C24" fill-rule="evenodd" d="M255.4 53.9c-1-.1-2-.5-2.8-1 3.4-5-.4-5.5.9-10 1-3.4 4-5.3 3.7-5.3-6.2.6-8.3 6-9 10.8l-.4-1c-1.7-4.3-.5-9.5 2.6-11.8 2-1.5 4.6-1 8-1.8 4.2-1 6.6-2.5 7.6-4 1-1.4 1.5-3 1.5-4.8l1.5 5.7c0 2.6-.7 4.9-2.1 6.7-1.8 2.4-5.7 3.4-6 5.5-.2 2.1 2.6 5 5 4.7 2.2-.3 2.5-1.4 2.5-1.4.1 0-1.4 8.8-13 7.7z"></path><path fill="#ADDF00" fill-rule="evenodd" d="M3 41L0 51l69-7 3-10-69 7zM98 59l-1 7 37-7 1-6-37 6z"></path><path fill="#40FF40" fill-rule="evenodd" d="M60 78l-3 9 34-9 2-9"></path><path fill="#F7941D" fill-rule="evenodd" d="M190 52l9-3v7l-9 3v-7zM169 44v7l11 5v-7l-11-5z"></path><path fill="#FFAB00" fill-rule="evenodd" d="M217 61v8l7 5v-6M232 60l-4 4v6l4-4v-6z"></path><path fill="#FFF200" fill-rule="evenodd" d="M250 60l-11 7v6l11-8"></path></svg>
         <section class="form-fields">
             <div class='full-width itr-form-field'>
                 <input id="iteration-name" name="iteration-name" type="text" required class="input-field" autocomplete="false"
@@ -127,7 +128,9 @@
                 </form>
             </nav>
         </aside>
-        <canvas id="burndownOutput" width="1100" height="800">Unsupported. May we suggest upgrading to a real browser?</canvas>
+        <div id="burndown-graph-panel">
+            <canvas id="burndownOutput" width="1100" height="800">Unsupported. May we suggest upgrading to a real browser?</canvas>
+        </div>
         <div id='yaxis'></div>
     </article>
     <span id="popover" class="popover"></span>
