--- a/public/index.html
+++ b/public/index.html
@@ -120,7 +120,6 @@
             <input type="file" id="input" name="input" multiple>
         </label>
     </section>
-    <script src="lib/js/flambe.js"></script>
     <article id="burndown-chart-panel" style="--cols:11">
         <input type="checkbox" name="settings-panel" class="settings-panel" id="settings-panel" value="" />
         <aside id="hamburger-settings-menu">
@@ -169,9 +168,10 @@
         <div id='yaxis'></div>
     </article>
     <span id="popover" class="popover"></span>
-    <script src="lib/js/TeamDialog.js"></script>
-    <script src="lib/js/asbestos.js"></script>
-    
+    <script src="./lib/js/modules/global.js" type="module"></script>
+    <script src="lib/js/flambe.js" type="module"></script>
+    <script src="lib/js/TeamDialog.js" type="module"></script>
+    <script src="lib/js/asbestos.js" type="module"></script>
     </body>
 
 </html>
