LocalForage may have gotten punk'd

--- a/public/test.html
+++ b/public/test.html
@@ -6,8 +6,9 @@
 </head>
     
 <body>
+    <div class="calendarRange"></div>
 
-    <script type="module" src="/lib/js/db.js"></script>
+    <script type="module" src="./lib/js/db/db.js"></script>
     
     </body>
 
