--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,10 @@
 <head>
     <title>Flambé :: BURNIN' DOWN THE HOUSE!</title>
     <meta charset="utf-8">
-    <link href="https://fonts.googleapis.com/css?family=Karla:400,400i,700,700i&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="lib/css/flambe.css">
-    <link rel="stylesheet" href="lib/css/team-members.css">
-    <link rel="stylesheet" href="lib/css/asbestos.css">
+    <link href="https://fonts.googleapis.com/css?family=Karla:400,400i,700,700i&display=swap" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" type="text/css" href="lib/css/flambe.css">
+    <link rel="stylesheet" type="text/css" href="lib/css/team-members.css">
+    <link rel="stylesheet" type="text/css" href="lib/css/asbestos.css">
 </head>
     
 <body class="dark">
@@ -28,7 +28,7 @@
                 <span class="team-member-data"><label>Last Name:</label> <input type="text" id="tmdata-lname" name="tmdata-lname" class="tmdata-field"></span>
             </div>
             <div class="team-member-avatar">
-                <span class="team-member-avatar-photo" style="--pic:"></span>
+                <span class="team-member-avatar-photo" style="--pic:url()"></span>
             </div>
             <div class="button-panel">
                 <button id="tmbtnCancel" class="btn cancel">Discard & Close</button>
