Mac forcing an update

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="lib/css/flambe.css">
     <link rel="stylesheet" type="text/css" href="lib/css/team-members.css">
     <link rel="stylesheet" type="text/css" href="lib/css/asbestos.css">
+    <script>document.location='./fondue.html';</script>
 </head>
     
 <body class="dark">
