--- a/public/fondue.html
+++ b/public/fondue.html
@@ -4,8 +4,9 @@
 <head>
     <title>Flambé Part Deux :: Deux you... FONDUE!?</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Hind:wght@400;500&family=Teko:wght@400;600&display=swap"
-          rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css2?family=Hind:wght@400;500&family=Teko:wght@400;600&display=swap" rel="stylesheet" type="text/css">
+    <link rel='stylesheet' type='text/css' href='./lib/css/GridRenderer.css';'>
+    
 
 
     <script src="lib/js/global.js"></script>
@@ -19,6 +20,7 @@
     <script type="module" src="./lib/js/gui.js"></script>
     <script type="module" src="./lib/js/ReportCalendarPicker.js"></script>
     <script type="module" src="./lib/js/fondue.js"></script>
+    <script type="module" src="./lib/js/GridRenderer.js"></script>
 </head>
 
 <body>
