--- a/public/fondue.html
+++ b/public/fondue.html
@@ -5,7 +5,7 @@
     <title>Flambé Part Deux :: Deux you... FONDUE!?</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Hind:wght@400;500&family=Teko:wght@400;600&display=swap" rel="stylesheet" type="text/css">
-    <link rel='stylesheet' type='text/css' href='./lib/css/GridRenderer.css';'>
+    <link rel='stylesheet' type='text/css' href='./lib/css/GridRenderer.css'>
     
 
 
