--- a/public/grid.html
+++ b/public/grid.html
@@ -5,14 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel='stylesheet' type='text/css' href='./grid.css'>
+    <link rel='stylesheet' type='text/css' href='./lib/css/grid.css'>
     
 </head>
 <body>
-    <div id="example-table"></div>
+    <div id="example-table">
+        <h1 class='loading'></h1>
+    </div>
     <input type="checkbox" id="grouping" name="grouping"><label for="grouping"></label>
 
     <script type="module" src="./lib/js/fondutabase.js"></script>
-    <script src="./grid.js" type="module"></script>
+    <script src="./lib/js/grid.js" type="module"></script>
 </body>
 </html>
