--- a/public/fondue.html
+++ b/public/fondue.html
@@ -2,11 +2,12 @@
 <html lang="en">
 
 <head>
-    <title>Flambé Part Deux :: Deux you... FONDUE!?</title>
+    <title>Fondue v.0.2a - Flambé Part Deux :: Deux you... FONDUE!?</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Hind:wght@400;500&family=Teko:wght@400;600&display=swap" rel="stylesheet" type="text/css">
     <link rel='stylesheet' type='text/css' href='./lib/css/GridRenderer.css'>
     
+    <link rel="shortcut icon" type="image/svg" href="./favicon.svg"/>
 
 
     <script src="lib/js/global.js"></script>
