Working chart, working grid, working imports and exports, working too many damn all-nighters

--- a/public/burndown.html
+++ b/public/burndown.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel='stylesheet' type='text/css' href='./lib/css/graph.css'>
+    <link rel='stylesheet' type='text/css' href='./lib/css/burndown.css'>
+    <link rel='stylesheet' type='text/css' href='https://fonts.googleapis.com/css2?family=Dosis:wght@600&amp;family=PT+Sans+Narrow:wght@400;700&amp;family=Squada+One&amp;family=Yellowtail&amp;display=swap'>
     
     <script type="module" src="./lib/js/fondutabase.js"></script>
 
@@ -16,8 +17,10 @@
                                 '2021/07/28','2021/07/29','2021/07/30',                             // sprint starts, to account for the Seed. So if the sprint starts 6/15/21
                                 '2021/08/02','2021/08/03'];        
     </script>
+    <script type="module" src="./lib/js/burndown.js"></script>
 
-    <script src="./lib/js/graph.js" type="module"></script>
+
+
 </head>
 <body>
     
